Closed Bug 749698 Opened 12 years ago Closed 12 years ago

Assertion failure: any, at jsgc.cpp:3303

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: jandem, Assigned: billm)

References

Details

Attachments

(1 file)

The following asserts on mozilla-inbound revision 2b2419d14197:

it.custom = 0;

$ ./js test.js
Assertion failure: any, at jsgc.cpp:3303

Seems to be shell-only and caused by the "it"-object somehow, but this assert prevents me from landing bug 738525.
hg bisect points to bug 739899, revision 94199cf080a3.

Bill can you take a look?
Blocks: 739899
Attached patch fixSplinter Review
Sorry about that. When gcPoke gets set and we GC again, we need to tell it which compartments to collect.
Assignee: general → wmccloskey
Status: NEW → ASSIGNED
Attachment #619140 - Flags: review?(igor)
Attachment #619140 - Flags: review?(igor) → review+
https://hg.mozilla.org/mozilla-central/rev/84ec0fadb88c
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: