Bug 749698 - Setup compartment to collect when gcPoke set (r=igor)